| Bug #54457 | Test suite broken for 32-bit build | ||
|---|---|---|---|
| Submitted: | 12 Jun 2010 15:12 | Modified: | 15 Oct 2010 10:54 |
| Reporter: | Davi Arnaut (OCA) | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Options | Severity: | S1 (Critical) |
| Version: | 5.1 | OS: | Linux |
| Assigned to: | Davi Arnaut | CPU Architecture: | Any |
[12 Jun 2010 15:12]
Davi Arnaut
[12 Jun 2010 16:12]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/110930 3431 Davi Arnaut 2010-06-12 Bug#54457: Test suite broken for 32-bit build The default value of the myisam_max_extra_sort_file_size could be higher than the maximum accepted value, leading to warnings upon the server start. The solution is to simply set the value to the maximum value in a 32-bit built (2147483647, one less than the current). This should be harmless as the option is currently unused in 5.1. @ include/myisam.h Remove now-unused macro. @ sql/mysqld.cc Set max value to INT_MAX32.
[28 Jun 2010 21:05]
Davi Arnaut
Queued to 5.1-bugteam. Null merged to mysql-trunk-merge.
[19 Jul 2010 14:34]
Bugs System
Pushed into 5.1.49 (revid:build@mysql.com-20100719143034-omcma40sblwmay3x) (version source revid:davi.arnaut@sun.com-20100628192028-xh1sohc8aawafnkq) (merge vers: 5.1.48) (pib:16)
[19 Jul 2010 19:52]
Paul DuBois
Noted in 5.1.49 changelog. The default value of myisam_max_extra_sort_file_size could be higher than the maximum accepted value, leading to warnings upon the server start. Setting report to Need Merge pending further pushes.
[23 Jul 2010 12:23]
Bugs System
Pushed into mysql-trunk 5.5.6-m3 (revid:alik@sun.com-20100723121820-jryu2fuw3pc53q9w) (version source revid:vasil.dimov@oracle.com-20100531152341-x2d4hma644icamh1) (merge vers: 5.5.5-m3) (pib:18)
[23 Jul 2010 12:30]
Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100723121929-90e9zemk3jkr2ocy) (version source revid:vasil.dimov@oracle.com-20100531152341-x2d4hma644icamh1) (pib:18)
[29 Jul 2010 19:03]
Paul DuBois
Noted in 5.5.6 changelog.
[6 Oct 2010 17:53]
Paul DuBois
Correction: No 5.5.6 changelog entry. The patch was null-merged to 5.5.
[14 Oct 2010 8:25]
Bugs System
Pushed into mysql-5.1-telco-7.0 5.1.51-ndb-7.0.20 (revid:martin.skold@mysql.com-20101014082627-jrmy9xbfbtrebw3c) (version source revid:vasil.dimov@oracle.com-20100531152341-x2d4hma644icamh1) (merge vers: 5.5.5-m3) (pib:21)
[14 Oct 2010 8:40]
Bugs System
Pushed into mysql-5.1-telco-6.3 5.1.51-ndb-6.3.39 (revid:martin.skold@mysql.com-20101014083757-5qo48b86d69zjvzj) (version source revid:vasil.dimov@oracle.com-20100531152341-x2d4hma644icamh1) (merge vers: 5.5.5-m3) (pib:21)
[14 Oct 2010 8:55]
Bugs System
Pushed into mysql-5.1-telco-6.2 5.1.51-ndb-6.2.19 (revid:martin.skold@mysql.com-20101014084420-y54ecj85j5we27oa) (version source revid:vasil.dimov@oracle.com-20100531152341-x2d4hma644icamh1) (merge vers: 5.5.5-m3) (pib:21)
[15 Oct 2010 10:54]
Jon Stephens
Already documented in the 5.1.49 changelog. No new changelog entries required. Reverting to Closed state.
